Test/traits/TraitExtend.dfy.expect
TraitExtend.dfy(40,21): Error: wrong number of arguments (function 'Mul' expects 3, got 2)
TraitExtend.dfy(41,21): Error: wrong number of arguments (function 'Plus' expects 2, got 3)
2 resolution/type errors detected in TraitExtend.dfy
